--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2018"
 [dependencies]
 rumqtt="0.31.0"
 config = "0.10.1"
+serde = { version = "1.0.106", features = ["derive"] }
+serde_json = "1.0.50"
