--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,7 @@
-mqtt_host = "localhost"
-mqtt_port = 1883
+[mqtt]
+host = "localhost"
+port = 1883
 topic_name = "weather"
+
+[telegram]
+token = "xxx"
