--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2018"
 [dependencies]
 rumqtt="0.31.0"
 config = "0.10.1"
-serde = { version = "1.0.106", features = ["derive"] }
-serde_json = "1.0.50"
-clap = "2.33.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+clap = "2"
+tbot = "0.5"
+tokio = { version = "0.2", features = ["macros", "blocking"] }
