--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,15 @@
 [mqtt]
 #host = "localhost"
-host = "192.168.1.9"
-port = 1883
+#host = "192.168.1.9"
+#port = 1883
+host = "kdubovikov.ml"
+port = 8883
 topic_name = "weather"
+username = "mqttusr"
+password = "mqttpass"
 
 [telegram]
 token = "1140943609:AAGnmHwlZBTnkj2jUAz0Td_IDpr_FA3iHGw"
+
+[tls]
+ca_cert = "./certs/ca.crt"
