fix: added diesel CLI to CI build

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,6 +20,8 @@ jobs:
         toolchain: nightly
         override: true
         default: true
+    - name: Install Diesel CLI
+      run: cargo install diesel_cli --no-default-features --features sqlite
     - name: Build
       run: cargo build --verbose --release
     - name: Run tests
