--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ clap = "2"
 tbot = "0.6.2"
 tokio = { version = "0.2", features = ["macros", "blocking"] }
 db = { path = "db" }
+tower-web = "0.3.7"
